--- a/css/main.css
+++ b/css/main.css
@@ -25,9 +25,13 @@ html {
 }
 
 .banner {
-
+  position: relative;
 }
 
 .banner-content {
-
+  color: white;
+  position: absolute;
+  width: 100%;
+  left: 0;
+  bottom: 0;
 }
